[tool.poetry]
name = "CostsMap"
version = "3.0.0"
description = "CostsMap is a site for costs accounting"
authors = ["artemowkin <artyom.groshev2017@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.75.1"}
SQLAlchemy = "^1.4.35"
databases = "^0.5.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
