[tool.poetry]
name = "costsmap"
version = "0.1.0"
description = ""
authors = ["Artyom <artyom.groshev2017@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
hypercorn = "^0.14.3"
fastapi = "^0.88.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
ormar = "^0.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^4.4.0"


[tool.poetry.scripts]
dev = "app.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
