[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "artemowkin", email = "artyom.groshev2017@gmail.com"},
]
dependencies = [
    "fastapi>=0.89.1",
    "ormar>=0.12.0",
    "python-jose>=3.3.0",
    "python-dotenv>=0.21.1",
    "uvicorn>=0.20.0",
    "asyncpg>=0.27.0",
    "passlib>=1.7.4",
    "redis>=4.4.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}
